--- a/src/views/public/user/login.ejs
+++ b/src/views/public/user/login.ejs
@@ -1,6 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center cont-login">
   <div class="text-center w-100">
     <form class="form-login" autocomplete="off" method="POST" action="/user/login">
+      <input type="hidden" name="_csrf" value="<%- csrfToken %>">
       <a href="/">
         <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
       </a>
