--- a/src/views/public/user/register.ejs
+++ b/src/views/public/user/register.ejs
@@ -1,6 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center cont-register">
   <div class="text-center w-100">
     <form class="form-register" autocomplete="off" action="/user/register" method="POST">
+      <input type="hidden" name="_csrf" value="<%- csrfToken %>">
       <a href="/">
         <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
       </a>
