--- a/src/views/public/layouts/layout-main.ejs
+++ b/src/views/public/layouts/layout-main.ejs
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <% if(typeof(csrfToken) !== "undefined") { %>
+    <meta name="csrf-token" content="<%- csrfToken %>">
+  <% } %>
   <title><%- title %></title>
   <link rel="stylesheet" type="text/css" href="/styles/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/styles/css/main.css">
